# identinum

./: .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  tests.yml
decimal2rational/: __init__.py
dedec/: __about__.py  __init__.py  cli.py  main.py
identinum/: __about__.py  __init__.py
src/identinum/: __init__.py  main.py
test/: test.py  test_cli.py  test_dedec.py  test_identinum.py
tests/: test_cli.py  test_identinum.py
tools/: d2r  dedec
