[metadata]
name = identinum
version = 0.6.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Guess symbolic expressions from decimals
url = https://github.com/nschloe/identinum
project_urls =
    Code=https://github.com/nschloe/identinum
    Issues=https://github.com/nschloe/identinum/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    mpmath
    sympy
python_requires = >=3.6

[options.extras_require]
all =
    netCDF4
    h5py  # CGNS, H5M, MED, XDMF formats

[options.entry_points]
console_scripts =
    identinum = identinum.cli:main
